<?xml version="1.0"?>
<package>
  <name>memsense_imu</name>
  <version>0.2.0</version>
  <description>
     This is a ROS generic driver for inertial measurement units (IMUs)
     provided by Memsense. It uses Memsense libraries to handle IMU's output
     on the serial port (with some errors fixed, and a rewritten serial port 
     class for Unix alike systems).
  </description>
  <author>Joan Pau Beltran</author>
  <maintainer email="robertgcofield@gmail.com">Robert G. Cofield</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/memsense_imu</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
    <run_depend>message_runtime</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>driver_base</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>driver_base</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
 
  <export>
    <nodelet plugin="${prefix}/nodelet/nodelet_plugins.xml"/>
  </export>
  
</package>


